2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/cpu/Makefile.am: Add new M32R port. It is just a beginning but
	the BSP is functional enough to initialize and shutdown RTEMS.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Revert trash committed. Shell builds with m32c now.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, score/cpu/Makefile.am: Initial addition of M32C port.
	This is still a work in process but most tests do run on simulator.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/utils-cp.c: Do not put a 64K buffer on the stack.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/priority.inl: Use simple integer as loop
	counter.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-monitor.c, rtems/include/rtems/rtems/types.h: Do
	not have fp context type when no hardware or software floating point
	is available.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc_statistics_helpers.c,
	libcsupport/src/realloc.c, rtems/include/rtems/rtems/region.h,
	rtems/include/rtems/rtems/support.h,
	rtems/src/regiongetsegmentsize.c, rtems/src/regionresizesegment.c,
	rtems/src/workspace.c, sapi/include/confdefs.h,
	score/include/rtems/score/heap.h,
	score/include/rtems/score/protectedheap.h,
	score/include/rtems/score/wkspace.h, score/src/heap.c,
	score/src/heapallocate.c, score/src/heapallocatealigned.c,
	score/src/heapextend.c, score/src/heapresizeblock.c,
	score/src/heapsizeofuserarea.c, score/src/pheapgetblocksize.c,
	score/src/wkspace.c: Change size_t to ssize_t on all Heap, Workspace
	and Region calls. On 16-bit architectures, size_t can be 16-bits
	which would limit sizes to 64K.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/main_cp.c, libmisc/shell/main_ls.c,
	libmisc/shell/main_mv.c, libmisc/shell/main_netstats.c,