@@ -334,6 +334,7 @@ score/cpu/h8300/Makefile
 score/cpu/i386/Makefile
 score/cpu/m68k/Makefile
 score/cpu/m32c/Makefile
+score/cpu/m32r/Makefile
 score/cpu/mips/Makefile
 score/cpu/nios2/Makefile
 score/cpu/powerpc/Makefile
